# dc

./: .gitignore  Cargo.toml  cam.cmd  dc.code-workspace  descr.sdp  desktop.ini  icon.rc
src/: answer.rs  camera.rs  camera2.rs  data.rs  event_handler.rs  lib.rs  logger.rs  main.rs  offer.rs  rtp_to_webrtc.rs  slave.rs  util.rs  waiter.rs
webpage/: index.html  script.js
