[package]
name = "dc"
version = "0.5.6"
edition = "2024"
authors = ["Artur Gwoździowski"]

[dependencies]
tokio = { version = "1.50.0", features = ["net", "time", "sync", "rt", "rt-multi-thread"] }
anyhow = "1.0.102"
ctrlc = "3.5.2"
serde_json = "1.0.149"
rand = "0.10.0"

#webrtc = {git = "https://github.com/webrtc-rs/webrtc.git", rev = "2adda95c26e3d48269701ac0cd6ef4cab761cb47"}
webrtc = {git = "https://github.com/webrtc-rs/webrtc.git", branch = "master"}
signaler = {path = "../ws"}
bytes = "1.11.1"
clap = {version="4.5.60", features=["derive"]}
futures = "0.3.32"
async-trait = "0.1.89"
dialoguer = "0.12.0"
colored = "3.1.1"

[build-dependencies]
embed-resource = "3.0.6"

[[bin]]
name="dc"
path="src/main.rs"

[[bin]]
name="waiter"
path="src/waiter.rs"

[[bin]]
name = "logger"
path = "src/logger.rs"

#[[bin]]
#name = "camera"
#path = "src/camera.rs"